[gd_scene load_steps=3 format=3 uid="uid://music_manager_state"]

[ext_resource type="Script" path="res://scripts/states/music_manager_state.gd" id="1_music"]
[ext_resource type="FontFile" path="res://assets/fonts/EurostileBold.tres" id="2_bold_font"]

[node name="MusicManagerState" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_music")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.1, 0.85)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.898039, 1, 1)
theme_override_fonts/font = ExtResource("2_bold_font")
theme_override_font_sizes/font_size = 42
text = "MUSIC MANAGER"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SurvivalSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Header" type="RichTextLabel" parent="MarginContainer/VBoxContainer/SurvivalSection"]
layout_mode = 2
bbcode_enabled = true
text = "[color=#7cff00]▼ SURVIVAL PLAYLIST[/color]"
fit_content = true
scroll_active = false
theme_override_fonts/normal_font = ExtResource("2_bold_font")
theme_override_font_sizes/normal_font_size = 24

[node name="TrackList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SurvivalSection"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="ZenSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Header" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ZenSection"]
layout_mode = 2
bbcode_enabled = true
text = "[color=#666677]▼ ZEN PLAYLIST[/color]"
fit_content = true
scroll_active = false
theme_override_fonts/normal_font = ExtResource("2_bold_font")
theme_override_font_sizes/normal_font_size = 24

[node name="TrackList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ZenSection"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Spacer3" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Instructions" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.4, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "↑↓ Navigate | TAB Switch section | ENTER Play | DEL Remove | ESC Back"
